[gd_scene load_steps=8 format=2]

[ext_resource path="res://Ball/Ball.gd" type="Script" id=1]
[ext_resource path="res://Assets/ballGrey.png" type="Texture" id=2]
[ext_resource path="res://Assets/ballBlue.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sound/SE_ploink.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sound/SE_ballwhiz.wav" type="AudioStream" id=5]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[node name="Ball" type="RigidBody2D"]
collision_layer = 0
mode = 2
physics_material_override = SubResource( 2 )
gravity_scale = 0.0
linear_damp = 0.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Images" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Images"]
texture = ExtResource( 2 )

[node name="Highlight" type="Sprite" parent="Images"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="SE_wall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SE_whiz" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="finished" from="SE_whiz" to="." method="_on_SE_whiz_finished"]
